cmake_minimum_required(VERSION 4.2)
project(untitled)

set(CMAKE_CXX_STANDARD 20)

add_executable(Bai_1 Luyentap_chuong1/Bt1.c
        Luyentap_4_Chuong_3/bt1.c
        Luyentap_4_Chuong_3/bt2.c
        Luyentap_4_Chuong_3/bt3.c
        Luyentap_4_Chuong_3/bt4.c
        Luyentap_4_Chuong_3/bt5.c
        Luyentap_4_Chuong_3/bt6.c
        Luyentap_4_Chuong_3/bt7.c)
add_executable(Bai_2 Luyentap_chuong1/Bt2.c)
add_executable(Bai_3 Luyentap_chuong1/Bt3.c)
add_executable(Bai_4 Luyentap_chuong1/Bt4.c)
add_executable(Bai_5 Luyentap_chuong1/Bt5.c)
add_executable(Bai_6 Luyentap_chuong1/Bt6.c)
