cmake_minimum_required(VERSION 3.10)
project(untitled C)

set(CMAKE_C_STANDARD 99)

# --- Luyentap_chuong1 ---
add_executable(Bt1_chuong1 Luyentap_chuong1/Bt1.c)
add_executable(Bt2_chuong1 Luyentap_chuong1/Bt2.c)
add_executable(Bt3_chuong1 Luyentap_chuong1/Bt3.c)
add_executable(Bt4_chuong1 Luyentap_chuong1/Bt4.c)
add_executable(Bt5_chuong1 Luyentap_chuong1/Bt5.c)
add_executable(Bt6_chuong1 Luyentap_chuong1/Bt6.c)

# --- Luyentap_4_Chuong_3 ---
add_executable(bt1_chuong3 Luyentap_4_Chuong_3/bt1.c)
add_executable(bt2_chuong3 Luyentap_4_Chuong_3/bt2.c)
add_executable(bt3_chuong3 Luyentap_4_Chuong_3/bt3.c)
add_executable(bt4_chuong3 Luyentap_4_Chuong_3/bt4.c)
add_executable(bt5_chuong3 Luyentap_4_Chuong_3/bt5.c)
add_executable(bt6_chuong3 Luyentap_4_Chuong_3/bt6.c)
add_executable(bt7_chuong3 Luyentap_4_Chuong_3/bt7.c)

# --- Luyentap_5_chuong_4 ---
add_executable(Bt2_chuong4 Luyentap_5_chuong_4/Bt2.c)
add_executable(Bt3_chuong4 Luyentap_5_chuong_4/Bt3.c)
add_executable(Bt4_chuong4 Luyentap_5_chuong_4/Bt4.c)

# --- Luyentap_5_chuong_4/Bt1 (Slides) ---
add_executable(slide15 Luyentap_5_chuong_4/Bt1/slide15.c)
add_executable(slide17 Luyentap_5_chuong_4/Bt1/slide17.c)
add_executable(slide19 Luyentap_5_chuong_4/Bt1/slide19.c)
add_executable(slide24 Luyentap_5_chuong_4/Bt1/slide24.c)
add_executable(slide26 Luyentap_5_chuong_4/Bt1/slide26.c)
add_executable(slide28 Luyentap_5_chuong_4/Bt1/slide28.c)
add_executable(slide30 Luyentap_5_chuong_4/Bt1/slide30.c)
